# docs/swagger.json
@@ -59,7 +59,7 @@
             }
         },
         "/user/deleteUser": {
-            "delete": {
+            "get": {
                 "tags": [
                     "用户模块"
                 ],
@@ -67,8 +67,38 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\",\"message\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/findByNameAndPwd": {
+            "get": {
+                "tags": [
+                    "用户模块"
+                ],
+                "summary": "通过用户名和密码查询",
+                "parameters": [
+                    {
+                        "type": "string",
                         "description": "用户名",
                         "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "密码",
+                        "name": "password",
                         "in": "query"
                     }
                 ],
@@ -98,7 +128,7 @@
             }
         },
         "/user/updateUser": {
-            "put": {
+            "post": {
                 "tags": [
                     "用户模块"
                 ],
@@ -107,7 +137,7 @@
                     {
                         "type": "string",
                         "description": "id",
-                        "name": "name",
+                        "name": "id",
                         "in": "formData"
                     },
                     {
@@ -120,6 +150,18 @@
                         "type": "string",
                         "description": "密码",
                         "name": "password",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "邮箱",
+                        "name": "email",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "手机号",
+                        "name": "phone",
                         "in": "formData"
                     }
                 ],
