# models/user_basic.go
@@ -12,8 +12,8 @@ type UserBasic struct {
 	gorm.Model
 	Name          string
 	PassWord      string
-	Phone         string
-	Email         string
+	Phone         string `valid:"matches(^1[3-9]{1}\\d{9}$)"`
+	Email         string `valid:"email"`
 	Avatar        string //头像
 	Identity      string
 	ClientIp      string
@@ -36,7 +36,36 @@ func GetUserList() []*UserBasic {
 	for _, v := range data {
 		fmt.Println(v)
 	}
+	utils.DB.Table(&UserBasic{}).Joins()
 	return data
+}
+
+// FindByNameAndPwd 通过用户名和密码查询
+func FindByNameAndPwd(name, password string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("name = ? and pass_word = ?", name, password).First(&user)
+	return user
+}
+
+// 通过用户名查找
+func FindByName(name string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("name = ?", name).First(&user)
+	return user
+}
+
+// 通过手机号查找
+func FindByPhone(phone string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("phone = ?", phone).First(&user)
+	return user
+}
+
+// 通过邮箱查找
+func FindByEmail(email string) UserBasic {
+	user := UserBasic{}
+	utils.DB.Where("email = ?", email).First(&user)
+	return user
 }
 
 // CreateUser 创建用户
@@ -45,8 +74,8 @@ func CreateUser(user *UserBasic) *gorm.DB {
 }
 
 // DeleteUser 删除用户
-func DeleteUser(user *UserBasic) {
-	utils.DB.Delete(user)
+func DeleteUser(user *UserBasic) *gorm.DB {
+	return utils.DB.Delete(user)
 }
 
 // UpdateUser 修改用户
